Insertion Into DB Complete

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,9 +18,11 @@
 				var page = sap.ui.view({id:"idLogin1", viewName:"fioritest.Login", type:sap.ui.core.mvc.ViewType.XML});
 				var signuppage = sap.ui.view({id:"signup", viewName:"fioritest.SignUp", type:sap.ui.core.mvc.ViewType.XML});
 				var suiteview = sap.ui.view({id:"suiteview", viewName:"fioritest.SuiteView", type:sap.ui.core.mvc.ViewType.XML});
+				var suiteviewdetails = sap.ui.view({id:"suiteviewdetails", viewName:"fioritest.SuiteViewDetails", type:sap.ui.core.mvc.ViewType.XML});
 				app.addPage(page);
 				app.addPage(signuppage);
 				app.addPage(suiteview);
+				app.addPage(suiteviewdetails);
 				app.placeAt("content");
 		</script>
 
